
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pprint_tree"
version = "0.0.2"
authors = [
    { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "SOME DESCRIPTION"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/zlliu246/pprint_tree"
Issues = "https://github.com/zlliu246/pprint_tree/issues"
